ping-pong_application/manifests/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ping-pong-deployment
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong
  template:
    metadata:
      labels:
        app: pingpong
    spec:
      containers:
        - name: pingpong
          image: docker.io/pjmartin/pingpong:3.1@sha256:ad21bf3ec6916a88f0bb7f03cf6fd27e85d347437c7c56ecb98f91ffa015f2c9
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
