ping-pong_application/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: ClusterIP
  selector:
    app: pingpong
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
